force-app/main/default/objects/Bank_Detail__c/fields/Account_Number_with_masking_digits__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_with_masking_digits__c</fullName>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>