force-app/main/default/objects/Bank_Detail__c/fields/Account_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Opening_Date__c</fullName>
    <label>Account Opening Date</label>
    <type>Date</type>
</CustomField>