force-app/main/default/objects/Bank_Detail__c/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <label>Branch Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>