force-app/main/default/objects/Bank_Detail__c/fields/Is_Account_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Verified</label>
    <type>Checkbox</type>
</CustomField>