force-app/main/default/objects/Bank_Detail__c/fields/Is_Bank_Exist__c.field-meta.xml
<CustomField>
    <fullName>Is_Bank_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bank Exist</label>
    <type>Checkbox</type>
</CustomField>