force-app/main/default/objects/Bank_Detail__c/fields/Mandate_Status__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Status__c</fullName>
    <label>Mandate Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>