force-app/main/default/objects/Bank_Detail__c/fields/MS_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>MS_IFSC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IFSC Code</label>
    <referenceTo>IFSC_Code_Master__c</referenceTo>
    <relationshipLabel>Bank Details</relationshipLabel>
    <relationshipName>Bank_Details</relationshipName>
    <type>Lookup</type>
</CustomField>