force-app/main/default/objects/Bank_Detail__c/fields/Sample_Cheque_Taken__c.field-meta.xml
<CustomField>
    <fullName>Sample_Cheque_Taken__c</fullName>
    <label>Sample Cheque Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>