force-app/main/default/objects/Bank_Detail__c/fields/UMRN_Number__c.field-meta.xml
<CustomField>
    <fullName>UMRN_Number__c</fullName>
    <label>UMRN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>