force-app/main/default/objects/Bank_Detail__c/validationRules/Account_opening_date_not_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_opening_date_not_be_future_date</fullName>
    <active>true</active>
    <description>Account opening date should not be future date</description>
    <errorConditionFormula>AND( ISNEW(),  Account_Opening_Date__c  &gt;  TODAY())</errorConditionFormula>
    <errorDisplayField>Account_Opening_Date__c</errorDisplayField>
    <errorMessage>Account opening date should not be future date</errorMessage>
</ValidationRule>